--- a/index.html
+++ b/index.html
@@ -16,20 +16,22 @@
 
 <body>
   <div class="container">
-    <div class="card">
-      <div class="img-container">
-        <img src="images/image-qr-code.png" alt="scam here" class="img-qr">
+    <main>
+      <div class="card">
+        <div class="img-container">
+          <img src="images/image-qr-code.png" alt="scam here" class="img-qr">
+        </div>
+        <div class="text">
+          <h1 class="title">Improve your front-end skills by building projects</h1>
+          <p class="content">Scan the QR code to visit Frontend Mentor and take your
+            coding skills to the next level</p>
+        </div>
       </div>
-      <div class="text">
-        <h2 class="title">Improve your front-end skills by building projects</h2>
-        <p class="content">Scan the QR code to visit Frontend Mentor and take your
-          coding skills to the next level</p>
-      </div>
-    </div>
-    <div class="attribution">
+    </main>
+    <footer class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="#">uvdevelop</a>.
-    </div>
+    </footer>
   </div>
 </body>
 
